# rivet-old

./: README.md  circle.yml  rivet.cabal
rivet/: Makefile  rivet.cabal
rivet-core/: rivet-core.cabal
rivet-core/src/Rivet/: Main.hs  Rules.hs  Tasks.hs
rivet-core/template/: migration.hs
rivet-core/template/heist/: _form.tpl  edit.tpl  index.tpl  new.tpl  show.tpl
rivet-core/template/model/: Forms.hs  Handlers.hs  Splices.hs  Types.hs
rivet-core/template/project/: .gitignore  Rivetfile  devel.cfg  project.cabal
rivet-core/template/project/snaplets/postgresql-simple/: devel.cfg  test.cfg
rivet-core/template/project/src/: Application.hs  Main.hs  Site.hs
rivet-docker/: rivet-docker.cabal
rivet-docker/src/Rivet/Lib/: Docker.hs
rivet-lib/: rivet-lib.cabal
rivet-lib/src/Rivet/: Common.hs  Main.hs  Migration.hs  Tasks.hs
rivet-lib/template/: migration.hs
rivet-lib/template/model/: Handlers.hs  Splices.hs  Types.hs
rivet-lib/template/project/: Rivetfile
rivet-lib/template/project/src/: Application.hs  Site.hs
rivet-migration/: rivet-migration.cabal
rivet-migration/src/Rivet/: Migration.hs
rivet-migration/src/Rivet/Migration/: V0.hs
rivet-simple-deploy/: README.md  rivet-simple-deploy.cabal
rivet-simple-deploy/provisioning/: inventory  prod.yml  stage.yml
rivet-simple-deploy/provisioning/group_vars/: all
rivet-simple-deploy/provisioning/roles/common/files/: nginx.tmpl
rivet-simple-deploy/provisioning/roles/common/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/common/templates/: deploy.sh  docker_credentials.sh  nginx.toml
rivet-simple-deploy/provisioning/roles/confd/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/nginx/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/postgresql/files/: pg_hba.conf
rivet-simple-deploy/provisioning/roles/postgresql/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/redis/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/ssl/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/tarsnap/tasks/: main.yml
rivet-simple-deploy/provisioning/roles/tarsnap/templates/: tarsnap.sh
rivet-simple-deploy/provisioning/roles/tarsnap/vars/: main.yml
rivet-simple-deploy/src/Rivet/Lib/: SimpleDeploy.hs
rivet/.halcyon/: cabal-post-update-hook  sandbox-sources
rivet/src/: Main.hs
src/Rivet/: Common.hs  InitTH.hs  Main.hs  Rules.hs  TH.hs  Tasks.hs
template/: .gitignore  project.cabal
template/model/: Forms.hs
template/project/: project.cabal
template/src/: Main.hs  Site.hs
