Name: project
Version: 0.1
Synopsis: Project Synopsis Here
Description: Project Description Here
License: AllRightsReserved
Author: Author
Maintainer: maintainer@example.com
Stability: Experimental
Category: Web
Build-type: Simple
Cabal-version: >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable project
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends: base                        >= 4       && < 5
               , heist                       >= 0.13    && < 0.14
               , containers                  >= 0.5     && < 0.6
               , unordered-containers        >= 0.2     && < 0.3
               , time                        >= 1.1     && < 1.5
               , mtl                         >= 2       && < 3
               , transformers                >= 0.4     && < 0.5
               , random                      >= 1.0     && < 1.2
               , directory                   >= 1.0     && < 1.3
               , filepath                    >= 1.0     && < 1.4
               , text                        >= 0.11    && < 1.2
               , aeson                       >= 0.7     && < 0.8
               , lens                        >= 4.0     && < 4.4
               , either                      >= 4.0     && < 4.4

               , MonadCatchIO-transformers   >= 0.3.1   && < 0.4
               , snap                        >= 0.13    && < 0.14
               , snap-core                   >= 0.9     && < 0.11
               , snap-server                 >= 0.9     && < 0.10
               , snap-loader-static          >= 0.9     && < 0.10
               , xmlhtml                     >= 0.1     && < 0.3
               , configurator                >= 0.2     && < 0.3
               , attoparsec                  >= 0.11    && < 0.13
               -- , monad-logger
               -- , resource-pool-catchio

               , postgresql-simple           >= 0.4     && < 0.5
               , snaplet-postgresql-simple   >= 0.4     && < 0.6
               , digestive-functors          >= 0.7     && < 0.8
               , digestive-functors-snap     >= 0.7     && < 0.8
               , digestive-functors-heist    >= 0.7     && < 0.8
               , hedis                       >= 0.6     && < 0.7
               , snaplet-redis               >= 0.1.4   && < 0.2
               , snap-extras                 >= 0.9     && < 0.10

               , snap-plus                   >= 0.1     && < 0.2
               , amazon-emailer-client-snap  >= 0.1.1.0 && < 0.2
               , dns                         >= 1.2     && < 1.5
               , migrate                     >= 0.1     && < 0.2
               , hspec2                      >= 0.4     && < 0.5
               , hspec-snap                  >= 0.2     && < 0.3
  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
      -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Test-Suite test-project
  type: exitcode-stdio-1.0
  hs-source-dirs: spec
  main-is: Main.hs
  default-language:    Haskell2010
  build-depends: hspec2
               , hspec-snap >= 0.2
  build-depends: project